# easy-DAQ

./: README.md  pyproject.toml  tcp_client.py
src/: tcp_client.py  tcp_sever.py
