[project]
name = "easy-daq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JialaChang", email = "jiala20061218@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dearpygui>=2.2",
]

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"
